# teetime

./: .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  deploy.sh  pyproject.toml
.github/workflows/: test.yml
app/: config.py  main.py
app/api/: bookings.py  health.py  jobs.py  webhooks.py
app/models/: database.py  schemas.py
app/providers/: base.py  sms_base.py  twilio_provider.py  wait_helper.py  walden_dom_schema.py  walden_provider.py
app/services/: booking_service.py  database_service.py  gemini_service.py  sms_service.py
app/utils/: timezone.py
docs/: _config.yml  architecture-review-2026-02-01.md  cloud-scheduler-setup.md  index.md  privacy.md  terms.md
scripts/: capture_html_snapshots.py  test_api.sh  validate_selectors.py
terraform/: .gitignore  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: test_api.py  test_booking_service.py  test_database_service.py  test_dom_parsing.py  test_gemini_service.py  test_jobs.py  test_mock_provider.py  test_schemas.py  test_sms_service.py  test_timezone.py  test_wait_helper.py  test_walden_provider.py
tests/fixtures/: dom_schema.py  selector_report.json  walden_login_page.html  walden_login_page.meta.json  walden_post_login.html  walden_post_login.meta.json  walden_tee_time_final.meta.json  walden_tee_time_initial.meta.json  walden_tee_time_loaded.meta.json  walden_tee_time_with_course.html  walden_tee_time_with_course.meta.json
