[tool.poetry]
name = "teetime"
version = "0.1.0"
description = "Golf tee time reservation application with SMS interface and LLM-powered natural language understanding"
authors = ["Devin AI <devin@cognition.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
twilio = "^9.3.0"
google-generativeai = "^0.8.0"
sqlalchemy = "^2.0.0"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
python-dotenv = "^1.0.0"
httpx = "^0.28.0"
apscheduler = "^3.10.0"
pytz = "^2024.2"
python-multipart = "^0.0.20"
aiosqlite = "^0.22.0"
selenium = "^4.39.0"
webdriver-manager = "^4.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.8.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
